# FastApi-blog

./: .env.example  .gitignore  .pre-commit-config.example.yaml  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0b244b6503c4_create_comment_model.py  6bc95b3b649f_create_subscription_model.py  cd871345e60f_create_rating_model.py  dcf11d0d5391_create_post_model.py  f94692697045_create_user_model.py
app/: admin.py  auth_backend.py  config.py  db.py  main.py  urls.py
app/models/: __init__.py  comments.py  posts.py  ratings.py  subscriptions.py  users.py  utils.py
app/routes/: __init__.py  auth.py  comments.py  posts.py  ratings.py  subscriptions.py  users.py
app/schemas/: comments.py  posts.py  ratings.py  subscriptions.py  users.py
app/services/: users.py  utils.py
